video error solved

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./assets/logo1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logo1.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toyota</title>
 </head>
@@ -30,21 +30,12 @@
                 <h3>V12 Twinturbo</h3>
                 <h2><span class="changecontent"></span></h2>
             </div>
-
-            <video src="./assets/Toyota Supra commercial ｜ Blender animation (online-video-cutter.com).mp4" loop
-                autoplay muted></video>
+<video src="./Toyota Supra commercial ｜ Blender animation (online-video-cutter.com).mp4"  autoplay muted loop></video>
         </section>
-        <section id="show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste aspernatur quisquam dolorum
-            aut. Voluptate rem sapiente quis ipsa quam ullam repellat, provident nobis, fuga optio ad vitae. Libero,
-            dicta officiis!
-        </section>
-        <section id="models"></section>
-        <section id="engine"></section>
+       
 
     </main>
-    <footer>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolorum soluta enim rerum porro praesentium
-        atque. Eaque autem incidunt nulla beatae atque maxime eligendi ex dolores adipisci provident. Earum, nihil!
-    </footer>
+   
 </body>
 
 </html>
